<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/nav_bookings"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_bookings" />
    <item
        android:id="@+id/nav_qr"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_qr" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
